# biolab-runners

./: .gitignore  .lychee.toml  AGENTS.md  AGENT_LEARNINGS.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  llms.txt  pyproject.toml
.claude/: settings.json
.claude/rules/: pbc-correction.md  restraint-force-resume.md  steering-potentials.md
.github/templates/: llms.txt.tpl
.github/workflows/: ci.yml  codeql.yml  generate-sbom.yaml  links.yml  write-llms-txt.yaml
biolab_runners/: __init__.py
biolab_runners/boltz2/: __init__.py  config.py  runner.py  utils.py
biolab_runners/openmm/: __init__.py  config.py  offline_gate.py  runner.py  utils.py
docs/SBOM/: syft-scan.spdx.json
tests/: test_boltz2_runner.py  test_offline_gate.py  test_openmm_runner.py
